--- a/cmfz-admin/src/main/webapp/WEB-INF/web.xml
+++ b/cmfz-admin/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,16 @@
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
 
+  <!--shiro-->
+  <filter>
+    <filter-name>shiroFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    <init-param>
+      <param-name>targetBeanName</param-name>
+      <param-value>shiroFilter</param-value>
+    </init-param>
+  </filter>
+
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -21,6 +31,13 @@
   </filter>
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
+
+  <filter-mapping>
+    <filter-name>shiroFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
