--- a/cmfz-admin/src/main/webapp/WEB-INF/web.xml
+++ b/cmfz-admin/src/main/webapp/WEB-INF/web.xml
@@ -1,25 +1,8 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:applicationContext.xml</param-value>
-  </context-param>
-
-  <!--shiro-->
-  <filter>
-    <filter-name>shiroFilter</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    <init-param>
-      <param-name>targetBeanName</param-name>
-      <param-value>shiroFilter</param-value>
-    </init-param>
-  </filter>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
   <filter>
     <filter-name>encodingFilter</filter-name>
@@ -35,15 +18,32 @@
   </filter-mapping>
 
 
-
+  <!--shiro的过滤器-->
+  <filter>
+    <filter-name>shiroFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    <init-param>
+      <!--
+          DelegatingFilterProxy 代理类 只负责请求的拦截 不负责请求的处理
+      -->
+      <param-name>targetBeanName</param-name>
+      <param-value>shiroFilter</param-value>
+    </init-param>
+  </filter>
   <filter-mapping>
     <filter-name>shiroFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
 
   <servlet>
     <servlet-name>springmvc</servlet-name>
@@ -52,11 +52,10 @@
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:applicationContext-mvc.xml</param-value>
     </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
-<servlet-mapping>
-  <servlet-name>springmvc</servlet-name>
-  <url-pattern>*.do</url-pattern>
-</servlet-mapping>
-  
-  
+  <servlet-mapping>
+    <servlet-name>springmvc</servlet-name>
+    <url-pattern>*.do</url-pattern>
+  </servlet-mapping>
 </web-app>
